--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ header{
 .hide-item{
 	display: none;
 }
+
 /* style for crop image */
 .cropped-image {
   position: relative;
@@ -87,6 +88,12 @@ a.coco-color:hover, input.coco-color:hover{
 	background-color: #D21141;
 	border-color: #AB0A32;
 }
+.home-link, .home-link:hover{
+	color: #2F7BBD;
+}
+a.no-underline:hover{
+	text-decoration: none;
+}
 /*loading indicator*/
 .loading-indicator{
 	padding: 200px;
@@ -157,7 +164,9 @@ a.coco-color:hover, input.coco-color:hover{
 	padding-bottom: 0px;
 	min-height: 30px;
 }
-/* house features */
+.house-section{
+	margin-bottom: 30px;
+}
 .house-features {
 	margin: 30px 0;
 }
@@ -176,4 +185,17 @@ a.coco-color:hover, input.coco-color:hover{
 .house-metrics{
 	margin: 10px 10px 20px 10px;
 	font-size: 18px;
+}
+.house-metrics a:hover i{
+	color: #D21141;
+}
+.services-list{
+	margin: 10px 20px;	
+}
+.services-list .service-item{
+	font-size: 16px;
+	margin: 10px 0;
+}
+.map-container{
+	margin-top: 20px;
 }
